<resources>
    <string name="app_name">Vizeey™</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_experiment">Vizeey</string>
    <string name="graph_tools_pan_and_zoom">Pan and zoom</string>
    <string name="graph_tools_pick">Pick data</string>
    <string name="graph_tools_more">More tools</string>
    <string name="graph_tools_system_time">Convert to system time</string>
    <string name="graph_tools_reset">Reset zoom</string>
    <string name="graph_tools_follow">Follow new data</string>
    <string name="graph_tools_linear_fit">Linear fit</string>
    <string name="graph_tools_export">Export this dataset</string>
    <string name="graph_tools_log_x">Logarithmic x axis</string>
    <string name="graph_tools_log_y">Logarithmic y axis</string>
    <string name="graph_point_label">Point</string>
    <string name="graph_slope_label">Slope</string>
    <string name="graph_difference_label">Difference</string>
    <string name="graph_fit_label">Linear fit: y = a x + b</string>
    <string name="applyZoomTitle">Apply zoom</string>
    <string name="applyZoomExplanation">As you are closing the interactive mode of this graph, you can select if you want to keep your zoom.</string>
    <string name="applyZoomAdvanced">Advanced options</string>
    <string name="applyZoomApply">Apply to…</string>
    <string name="applyZoomReset">Reset to default</string>
    <string name="applyZoomKeep">Keep as selected</string>
    <string name="applyZoomFollow">Keep and follow new data</string>
    <string name="applyZoomThis">Only this graph</string>
    <string name="applyZoomSameVariable">Other graphs: Same variable</string>
    <string name="applyZoomSameUnit">Other graphs: Same unit</string>
    <string name="applyZoomSameAxis">Other graphs: Same axis</string>
    <string name="newExperiment">Add experiments</string>
    <string name="newExperimentSimple">Create Smart Experiment</string>
    <string name="newExperimentPhyphoxInfo">Create you very own
Vizeey™ smartphone
experiments using
this tool. Name your
experiment, select the
sensors you wish to
use, and go forth and
explore!</string>
    <string name="newExperimentInputTitle">Title</string>
    <string name="newExperimentInputBufferSize">Buffer size (number of values to be stored)</string>
    <string name="newExperimentInputRate">Sensor rate (in Hz, 0 = as fast as possible)</string>
    <string name="newExperimentInputSensors">Active sensors</string>
    <string name="newExperimentBluetooth">Add experiment for Bluetooth device</string>
    <string name="newExperimentBluetoothErrorTitle">Bluetooth scan error</string>
    <string name="newExperimentBluetoothLoadFromDevice">Load from device</string>
    <string name="newExperimentBluetoothLoadFromDeviceInfo">This device provides its own phyphox experiment. Select "load from device" to open it.</string>
    <string name="newExperimentQR">Add experiment from QR code</string>
    <string name="newExperimentQRscan">Scan a QR code that contains a vizeey experiment.</string>
    <string name="newExperimentQRErrorTitle">QR code error.</string>
    <string name="newExperimentQRNoExperiment">Could not find a QR code that contains a Vizeey experiment.</string>
    <string name="newExperimentQRcrcMismatch">The QR code you just scanned does not seem to match to the previous codes. Please make sure to only scan the codes belonging to the same experiment.</string>
    <string name="newExperimentQRCodesMissing1">The QR code you just scanned is part of a set of</string>
    <string name="newExperimentQRCodesMissing2">codes. Please press continue to scan the remaining codes. Codes still missing: </string>
    <string name="newExperimentQRBadCRC">Invalid checksum. This means that either the QR code is bad or something went wrong while scanning it.</string>
    <string name="newExperimentBTReadErrorTitle">Bluetooth experiment error.</string>
    <string name="newExperimentBTReadErrorCorrupted">The transmitted experiment data is corrupted.</string>
    <string name="generalErrorDialog">An error has occurred.</string>
    <string name="help">Help and info</string>
    <string name="experimentsPhyphoxOrg">Experiments, FAQ, and Help</string>
    <string name="experimentsPhyphoxOrgURL">https://www.vizeey.com</string>
    <string name="faqPhyphoxOrg">Frequently asked questions</string>
    <string name="faqPhyphoxOrgURL">http://phyphox.org/faq</string>
    <string name="remotePhyphoxOrg">Remote control help</string>
    <string name="remotePhyphoxOrgURL">http://phyphox.org/remote-control</string>
    <string name="translationInfo">Languages</string>
    <string name="translationText">Vizeey will use the first language available from your preferred languages list. To change your preferences, go to your Android \"settings\" below. To learn which languages are available and how you can help, select \"visit website\".</string>
    <string name="translationToSettings">Settings</string>
    <string name="translationToWebsite">Visit website</string>
    <string name="translationToWebsiteURL">http://phyphox.org/languages#en</string>
    <string name="deviceInfo">Device info</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="deviceInfoCopied">The device info has been copied to your clipboard.</string>
    <string name="warning">Warning</string>
    <string name="donotshowagain">Do not show again</string>
    <string name="damageWarning">Please be careful not to damage your phone while experimenting. Please take special care to avoid dropping it on hard surfaces and do not expose it to excessive magnetic fields. The authors of Vizeey are not responsible for any damage to your phone.</string>
    <string name="info">Info</string>
    <string name="credits">Credits</string>
    <string name="creditsRWTH">phyphox® has been created at the 2nd Institute of Physics at the RWTH Aachen University.</string>
    <string name="creditsNames">
Development and Concept:\n
Dr. Sebastian Staacks\n
Concept:\n
Prof. Christoph Stampfer\n
Programming:\n
Dominik Dorsel\n
Jonas Gessner\n
Camilla Lummerzheim
    </string>
    <string name="gpl">
        Phyphox® is open source software released under the GNU General Public Licence. Please visit http://phyphox.org for further information and to get access to its source code. However, the name \"phyphox\" and \"RWTH Aachen\" are registered trademarks.
    </string>
    <string name="creditsLibs">
        The web-interface for remote access uses the JavaScript library \"Chart.js\" (http://chartjs.org), available under the MIT licence. For the fourier transform, we use the FFTW library (http://fftw.org), Copyright © 2003, 2007-11 Matteo Frigo, Copyright © 2003, 2007-11 Massachusetts Institute of Technology, which is available under the GNU General Public Licence (version 2 or later). GPS elevation data is converted from the WGS84 ellipsoid to the EGM84 geoid using EGM84 data (30\' resolution) and a ported function from the GographicLib (https://geographiclib.sourceforge.io/, MIT/X11 licence).
    </string>
    <string name="creditsApache" translatable="false">
        <![CDATA[
        <b>Apache POI</b><br />
Copyright 2003-2015 The Apache Software Foundation<br />
<br />
This product includes software developed by The Apache Software Foundation (http://www.apache.org/).<br />
<br />
This product contains parts that were originally based on software from BEA. Copyright (c) 2000-2003, BEA Systems, <http://www.bea.com/>.<br />
<br />
This product contains W3C XML Schema documents. Copyright 2001-2003 (c) World Wide Web Consortium (Massachusetts Institute of Technology, European Research Consortium for Informatics and Mathematics, Keio University)<br />
<br />
This product contains the Piccolo XML Parser for Java (http://piccolo.sourceforge.net/). Copyright 2002 Yuval Oren.<br />
<br />
This product contains the chunks_parse_cmds.tbl file from the vsdump program. Copyright (C) 2006-2007 Valek Filippov (frob@df.ru)<br />
<br />
This product contains parts of the eID Applet project (http://eid-applet.googlecode.com). Copyright (c) 2009-2014 FedICT (federal ICT department of Belgium), e-Contract.be BVBA (https://www.e-contract.be), Bart Hanssens from FedICT<br />
<br />
        ]]>
    </string>
    <string name="creditsZxing" translatable="false">
        <![CDATA[
        <b>Zxing</b><br />
        The QR code scanner function uses ZXing (https://github.com/zxing/zxing), licenced under the Apache licence v2.0 (please see the webpage for details on the licence and contributors). <br />
        <br />
NOTICES FOR BARCODE4J<br />
<br />
Barcode4J<br />
Copyright 2002-2010 Jeremias Märki<br />
Copyright 2005-2006 Dietmar Bürkle<br />
<br />
Portions of this software were contributed under section 5 of the<br />
Apache License. Contributors are listed under:<br />
http://barcode4j.sourceforge.net/contributors.html<br />
<br />
NOTICES FOR JCOMMANDER<br />
<br />
Copyright 2010 Cedric Beust cedric@beust.com
]]>
    </string>
    <string name="creditsPahoMQTT" translatable="false">
        <![CDATA[
        <b>Eclipse Paho MQTT</b><br />
        MQTT communication uses the Eclipse Paho MQTT library (https://www.eclipse.org/paho), licenced under the Eclipse Distribution Licence 1.0 (please see the webpage for details on the licence and contributors). <br />
        <br />
Eclipse Distribution License - v 1.0<br />
<br />
Copyright (c) 2007, Eclipse Foundation, Inc. and its licensors.<br />
<br />
All rights reserved.<br />
<br />
Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:<br />
<br />
    Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.<br />
    Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.<br />
    Neither the name of the Eclipse Foundation, Inc. nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.<br />
<br />
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.<br />
]]>
    </string>
    <string name="credit_msg" translatable="false">Vizeey™, brought to you by
databot™, is an open source software
released under the GNU General
Public License. Vizeey™ is based on
phyphox, an awesome project
developed by Dr. Sebastian Staacks
at RWTH Aachen University. Learn
more about Dr. Staacks and the
phyphox project at phyphox.org.
Contributions to their efforts are
encouraged! RWTH Aachen
University and phyphox are registered
trademarks, all rights reserved.
</string>
    <string name="sensorLinearAcceleration">Linear Acceleration</string>
    <string name="sensorLight">Light</string>
    <string name="sensorGyroscope">Gyroscope</string>
    <string name="sensorAccelerometer">Accelerometer</string>
    <string name="sensorMagneticField">Magnetic Field</string>
    <string name="sensorPressure">Pressure</string>
    <string name="sensorTemperature">Temperature</string>
</resources>