<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/rwth">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" >

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rwth"
                android:src="@drawable/header_credit"
                android:scaleType="fitCenter"
                android:layout_gravity="right"
                android:adjustViewBounds="true" />
            <TextView
                android:layout_marginVertical="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Based on"
                android:textSize="@dimen/credit_font_main"/>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                app:srcCompat="@drawable/phyphox_bright"
                android:scaleType="fitCenter"
                android:layout_gravity="start"
                android:adjustViewBounds="true"
                android:layout_marginLeft="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_msg"
                android:layout_marginVertical="15dp"
                android:id="@+id/creditRWTHNEW"
                android:textSize="@dimen/credit_font_main"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/brought_to_you_by_databot"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/creditsRWTH"
                android:id="@+id/creditRWTH"
                android:textSize="@dimen/credit_font_main"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditsNames"
                android:id="@+id/creditNames"
                android:textSize="@dimen/credit_font_main"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/rwth"
                android:layout_gravity="left"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpl"
                android:id="@+id/gpl"
                android:visibility="gone"
                android:layout_marginTop="@dimen/lib_margin"
                android:textSize="@dimen/credit_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditsLibs"
                android:id="@+id/creditLibs"
                android:visibility="gone"
                android:layout_marginTop="@dimen/lib_margin"
                android:textSize="@dimen/credit_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditsApache"
                android:id="@+id/creditsApache"
                android:textSize="@dimen/credit_font"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/lib_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditsZxing"
                android:id="@+id/creditsZxing"
                android:textSize="@dimen/credit_font"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/lib_margin" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/creditsPahoMQTT"
                android:id="@+id/creditsPahoMQTT"
                android:textSize="@dimen/credit_font"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/lib_margin" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
